# Parsing-assethub-events

./: Cargo.toml  Readme  assethub.metadata.binary.scale
src/: main.rs  our_rpc_client.rs
